# traider

./: .env.example  .gitignore  BATCH_API_STATUS.md  CLAUDE.md  MCP_SERVER.md  MIGRATION_GUIDE.md  PLAN-tone-godown-tracking.md  README.md  claude_desktop_config.example.json  mcp_server_stdio.py.old  pyproject.toml  requirements.txt  run.sh  sanitize-backend-db.md  sanitize-backend.txt
app/: __init__.py  db.py  main.py  mcp.py  models.py  repo.py
app/routes/: fabrics.py  mcp.py  movements.py  stock.py  variants.py
src/traider/: __init__.py  cli.py  cloudinary_utils.py  db.py  main.py  mcp.py  models.py  query_engine.py  repo.py
src/traider/routes/: fabrics.py  images.py  mcp.py  movements.py  query.py  search.py  stock.py  variants.py
